## shoppingCart ## 1. Fix: så inte varukorgen går out of bounds

--- a/web_module/src/main/webapp/resources/css/style.css
+++ b/web_module/src/main/webapp/resources/css/style.css
@@ -42,4 +42,11 @@
     margin: 1px 10px 1px 1px;
 }
 
+.cartStyle {
+    max-height: 50vh;
+}
+
+.cartId {
+    overflow: auto;
+}
 
